[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intentspec"
version = "0.3.0"
description = "Coverage and enforcement layer for AI agent infrastructure"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "oni", email = "oni@intentspec.dev"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.0,<9.0",
    "pyyaml>=6.0,<7.0",
    "jsonschema>=4.0,<5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.5.0",
    "mkdocs>=1.6",
    "mkdocs-material>=9.0",
    "pip-audit>=2.0",
    "twine>=5.0",
    "build>=1.0",
    "pip-tools>=7.0",
]

[project.scripts]
intentspec = "intentspec.cli:main"

[project.urls]
Homepage = "https://github.com/onicarps/intentspec"
Documentation = "https://intentspec.dev"
Repository = "https://github.com/onicarps/intentspec"
"Bug Tracker" = "https://github.com/onicarps/intentspec/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
intentspec = ["templates/*.yaml", "data/mcp/*.json", "data/mcp/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-xvs"
pythonpath = ["src"]

[tool.coverage.run]
source = ["intentspec"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
